# Smart-Terminal

./: .gitignore  Dockerfile.notebook  ReadMe.md  path.md  pyproject.toml  pytest.ini  setup.py  smart-terminal.py  uninstall.sh
.github/workflows/: python-package.yml  workflow.yml
smart_terminal/: __init__.py  cli.py
smart_terminal/adapters/: ai_provider.py  shell.py
smart_terminal/cache/: __init__.py  manager.py  models.py
smart_terminal/cli/: __init__.py  arguments.py  interactive.py  main.py
smart_terminal/config/: defaults.py  manager.py
smart_terminal/core/: ai.py  commands.py  context.py  shell_integration.py  terminal.py
smart_terminal/models/: config.py  context.py  message.py
smart_terminal/utils/: __init__.py  helpers.py  logging.py
tests/: conftest.py  test_ai.py  test_cli.py  test_commands.py  test_config.py  test_context.py  test_shell_integration.py  test_terminal.py  test_utils.py
tests/adapters/: test_shell.py
tests/cli/: test_arguments.py  test_interactive.py  test_main.py
tests/config/: test_defaults.py  test_manager.py
tests/core/: test_smart_terminal.py
tests/exceptions/: test_errors.py
tests/models/: test_command.py  test_config.py  test_context.py  test_message.py
tests/utils/: test_colors.py  test_helpers.py  test_logging.py
