[tool.poetry]
name = "smart-terminal"
version = "1.0.1"
description = "AI-Powered Terminal Command Generator and Executor"
authors = ["Murali Anand <smurali1607@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/muralianand12345/Smart-Terminal"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.65.2"
pydantic = "^2.10.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
st = "smart_terminal.cli:run_cli"