[tool.poetry]
name = "smart-terminal-cli"
version = "2.0.0"
description = "AI-Powered Terminal Command Generator and Executor"
authors = ["Murali Anand <smurali1607@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/muralianand12345/Smart-Terminal"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "smart_terminal"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = ">=1.65.2"
pydantic = ">=2.10.6"

[tool.poetry.scripts]
st = "smart_terminal.cli:run_cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
